--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,28 @@
-FROM python:3.10.12-slim
-WORKDIR /app
+FROM python:3.10-slim
 
-RUN apt-get update && apt-get install -y ffmpeg \
+WORKDIR /workspace
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ffmpeg \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt ./
-RUN pip install --upgrade pip
-RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+COPY requirements.txt .
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt && \
+    pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+
+COPY . .
+
+# Ensure UTF-8 encoding
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONPATH=/workspace \
+    LC_ALL=C.UTF-8 \
+    LANG=C.UTF-8
+
 EXPOSE 8501
-CMD ["streamlit","run", "app.py"]
+
+# Healthcheck for container orchestration
+HEALTHCHECK CMD curl --fail http://localhost:8501/_stcore/health || exit 1
+
+CMD ["streamlit", "run", "main.py", "--server.port=8501", "--server.address=0.0.0.0"]
