--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   neuranix-app:
     build:
@@ -24,6 +22,11 @@ services:
       python3 database_operations.py &&
       streamlit run main.py --server.port=8501 --server.address=0.0.0.0
       "
+    labels:
+      maintainer: "UjjwalS <ujjwal@example.com>"
+      project: "Neura-Nix"
+      website: "https://ujjwalsaini.dev"
+      copyright: "© 2025 Neura-Nix"
 
   redis:
     image: redis:7-alpine
